--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>JVO Buzzer - Host Start</title>
-    <style>
-        body { font-family: Arial; background-color: #222; color: white; text-align: center; }
-        img { height: 60px; margin-top: 30px; }
-        input { padding: 12px; font-size: 18px; border-radius: 5px; border: none; width: 300px; }
-        button { padding: 12px 30px; border: none; border-radius: 25px; background-color: #3b82f6; color: white; cursor: pointer; font-size: 18px; margin-top:20px;}
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="JvOBuzzer01.png" alt="JVO Buzzer">
+       <header>
+        <img src="JvOBuzzer01.png" alt="JVO Buzzer">
+    </header>
     <h2>Maak nieuw spel aan</h2>
     <input type="text" id="gameTitle" placeholder="Naam van het spel">
     <br>
